--- a/css/styles.css
+++ b/css/styles.css
@@ -253,8 +253,8 @@ img {
   position: relative;
   background-color: var(--white-color);
   padding: 8px;
-  width: 528px;
-  height: 581px;
+  width: 450px;
+  height: 609px;
   border-radius: 4px;
   box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2);
   box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.14);
@@ -420,8 +420,9 @@ textarea:hover {
 }
 
 .terms-text {
+  font-size: 12px;
   color: var(--backup-text-color);
-  line-height: 1.71428;
+  line-height: 1.17166;
   letter-spacing: 0.03em;
 }
 
@@ -434,7 +435,7 @@ textarea:hover {
   height: 13.5px;
   position: absolute;
   top: calc(50% - 6.5px);
-  left: calc(0% + 17.5px);
+  left: calc(0% + 6.5px);
   fill: var(--white-color);
   background: var(--highlighting-color);
   border-radius: 2px;
@@ -1063,6 +1064,7 @@ textarea:hover {
   .container {
     width: 768px;
   }
+
   .menu-button {
     display: none;
   }
@@ -1268,6 +1270,22 @@ textarea:hover {
   .container {
     width: 1200px;
   }
+
+  .modal-content {
+    width: 528px;
+    height: 581px;
+  }
+
+  .terms-text {
+    font-size: var(--general-font-size);
+    line-height: 1.71428;
+  }
+
+  .terms-and-conditions-label svg {
+    top: calc(50% - 6.5px);
+    left: calc(0% + 17.5px);
+  }
+
   .menu-button {
     display: none;
   }
