--- a/css/styles.css
+++ b/css/styles.css
@@ -158,16 +158,15 @@ img {
 .portfolio-page .section {
   display: flex;
   flex-direction: column;
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding: 94px 15px;
 }
 
 .portfolio-page .section .closed-buttons {
   display: flex;
-  flex-direction: row;
-  justify-content: center;
+  flex-wrap: wrap;
+  width: 70%;
   gap: 8px;
-  padding: 0 342px 50px 342px;
+  padding-bottom: 40px;
 }
 
 .section .opened-buttons {
@@ -179,6 +178,7 @@ img {
 }
 
 .section .opened-buttons .item {
+  width: 100%;
   border: 1px solid #eeeeee;
   transition: box-shadow var(--transition);
 }
@@ -1285,6 +1285,26 @@ textarea:hover {
     width: 100%;
     padding: 0 60px;
   }
+
+  /* Portfolio page */
+
+  .portfolio-page .section {
+    padding: 94px 0px;
+  }
+
+  .portfolio-page .section .closed-buttons {
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: row;
+    justify-content: center;
+    width: 100%;
+    gap: 8px;
+    padding: 0 110px 30px 110px;
+  }
+
+  .section .opened-buttons .item {
+    width: 40%;
+  }
 }
 
 /* Desktop TODO:*/
@@ -1508,5 +1528,10 @@ textarea:hover {
 
   .global-footer-form .textfield {
     width: 65%;
+  }
+
+  /* Portfolio page */
+  .section .opened-buttons .item {
+    width: auto;
   }
 }
